[package]
name = "egui_knob"
version = "0.3.5"
edition = "2024"
authors = ["Daniel Dada"]
description = "A simple knob widget for egui"
homepage = "https://github.com/obsqrbtz/egui_knob"
repository = "https://github.com/obsqrbtz/egui_knob"
documentation = "https://docs.rs/egui_knob"
readme = "README.md"
license = "MIT"
keywords = ["egui", "ui", "widget", "knob", "range"]
categories = ["gui"]

[lib]
name = "egui_knob"
path = "src/lib.rs"

[[example]]
name = "example_knob"
path = "examples/example_knob.rs"

[dependencies]
egui = "0.33"

[dev-dependencies]
eframe = { version = "0.33", features = ["default_fonts"] }
